# onion_vault

./: Cargo.toml  README.md
crates/onion_vault_cli/: Cargo.toml
crates/onion_vault_cli/src/: app.rs  args.rs  lib.rs  main.rs
crates/onion_vault_cli/src/common/: mod.rs
crates/onion_vault_cli/src/common/constants/: mod.rs
crates/onion_vault_cli/src/common/enums/: mod.rs
crates/onion_vault_cli/src/common/macros/: impl_display_for_enum.rs  mod.rs
crates/onion_vault_cli/src/common/test_helpers/: mod.rs
crates/onion_vault_cli/src/common/traits/: mod.rs
crates/onion_vault_cli/src/config/: default.rs
crates/onion_vault_cli/src/help/: mod.rs
crates/onion_vault_cli/src/operations/: mod.rs
crates/onion_vault_cli/src/operations/onion_vault/: mod.rs
crates/onion_vault_cli/src/operations/onion_vault/identity_group/: mod.rs
crates/onion_vault_cli/src/operations/onion_vault/identity_group/account/: mod.rs
crates/onion_vault_cli/src/operations/onion_vault/identity_group/account/credential/: mod.rs
crates/onion_vault_cli/src/re_export/: mod.rs  onion_vault_core.rs  rage.rs  std_anyhow.rs  uni_vault.rs
crates/onion_vault_core/: Cargo.toml  README.md
crates/onion_vault_core/src/: lib.rs  onion_vault.rs  vault_map.rs
crates/onion_vault_core/src/common/: mod.rs
crates/onion_vault_core/src/common/enums/: mod.rs
crates/onion_vault_core/src/common/macros/: mod.rs  print_line.rs
crates/onion_vault_core/src/common/test_helpers/: mod.rs
crates/onion_vault_core/src/common/traits/: mod.rs  rage_trezor.rs
crates/onion_vault_core/src/identity_group/: mod.rs
crates/onion_vault_core/src/identity_group/account/: mod.rs
crates/onion_vault_core/src/identity_group/account/account_credential/: mod.rs
crates/onion_vault_core/src/re_export/: mod.rs  rage.rs  std_anyhow.rs  uni_vault.rs
crates/onion_vault_core/src/tests/: mod.rs  test_onion_vault.rs
crates/signature_to_keys/: CHANGELOG.md  Cargo.toml  README.md
crates/signature_to_keys/src/: lib.rs
crates/signature_to_keys/src/common/enums/: mod.rs
crates/signature_to_keys/src/common/macros/: mod.rs  print_line.rs
crates/signature_to_keys/src/common/test_helpers/: mod.rs
crates/signature_to_keys/src/common/traits/: json_compact_data.rs  mod.rs
crates/signature_to_keys/src/extensions/: mod.rs
crates/signature_to_keys/src/re_export/: rage.rs  std_anyhow.rs
crates/signature_to_keys/src/signature_generators/: mod.rs
crates/signature_to_keys/src/signature_generators/eth/: mod.rs
crates/signature_to_keys/src/signature_generators/eth/trezor/: mod.rs
crates/signature_to_keys/src/signature_generators/eth/trezor/tests/: mod.rs  test_trezor_client.rs  test_trezor_key_generator.rs
crates/uni_vault/: CHANGELOG.md  Cargo.toml  README.md
crates/uni_vault/src/: lib.rs  test.rs  uni_vault.rs
crates/uni_vault/src/common/constants/: mod.rs
crates/uni_vault/src/common/test_helpers/: mod.rs
crates/uni_vault/src/common/traits/: mod.rs
crates/uni_vault/src/encryptor/: mod.rs
crates/uni_vault/src/encryptor/asymmetric/: mod.rs
crates/uni_vault/src/encryptor/asymmetric/rage_trezor/: mod.rs  test.rs
crates/uni_vault/src/re_export/: mod.rs  rage.rs  std_anyhow.rs
crates/uni_vault/src/utils/: mod.rs
crates/uni_vault/src/utils/base58/: base58ck_string.rs  mod.rs
docs/theory_paper/en/: 00_introduction.md  01_existing_solutions.md  02_proposed_solution.md  03_appendix_faq.md  article.md  signature_to_keys.md
docs/theory_paper/zh/: 00_introduction.md  01_existing_solutions.md  02_proposed_solution.md  03_appendix_faq.md  README.md  article.md  signature_to_keys.md
