[package]
name = "onion_vault_cli"
version = "0.1.0"
authors = ["t4nature <t4nature@proton.me>"]
edition = "2021"

[[bin]]
name = "onion-vault-cli"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1.0.95", features = ["backtrace"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
uni_vault = { path = "../uni_vault" }
signature_to_keys = { path = "../signature_to_keys" }
onion_vault_core = { path = "../onion_vault_core" }
zeroize = { version = "1.8.1", features = ["std", "zeroize_derive"] }
derive_builder = { version = "0.20.2", features = ["alloc", "clippy"] }
age = { version = "0.11.1", features = ["ssh"] }
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
passwords = "3.1.16"
clap = { version = "4.5.27", features = ["env", "derive"] }
directories = "6.0.0"
lazy_static = "1.5.0"
console = "0.15.10"
enigo = "0.3.0"
