[package]
name = "onion_vault_cli"
version = "0.0.3"
description = """
OnionVault CLI
"""
authors = ["Ryder Freeman"]
edition = "2021"
license = "Apache-2.0"
readme = "../../README.md"
documentation = "https://docs.rs/onion_vault_cli"
homepage = "https://github.com/RyderFreeman4Logos/onion_vault/tree/main/crates/onion_vault_cli"
repository = "https://github.com/OnionVault/onion_vault"
keywords = ["password", "security", "cross-platform", "cryptography", "password-manager"]
categories = ["cryptography", "authentication"]
rust-version = "1.84.1"

[[bin]]
name = "onion-vault-cli"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1.0.95", features = ["backtrace"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
uni_vault = "0.0.3"
signature_to_keys = "0.0.3"
onion_vault_core = "0.0.3"
zeroize = { version = "1.8.1", features = ["std", "zeroize_derive"] }
derive_builder = { version = "0.20.2", features = ["alloc", "clippy"] }
age = { version = "0.11.1", features = ["ssh"] }
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
passwords = "3.1.16"
clap = { version = "4.5.27", features = ["env", "derive"] }
directories = "6.0.0"
lazy_static = "1.5.0"
console = "0.15.10"
enigo = "0.3.0"
