[package]
name = "onion_vault_core"
version = "0.1.0"
authors = ["t4nature <t4nature@proton.me>"]
edition = "2021"

[dependencies]
anyhow = { version = "1.0.95", features = ["backtrace"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
uni_vault = { path = "../uni_vault" }
signature_to_keys = { path = "../signature_to_keys" }
zeroize = { version = "1.8.1", features = ["std", "zeroize_derive"] }
derive_builder = { version = "0.20.2", features = ["alloc", "clippy"] }
age = { version = "0.11.1", features = ["ssh"] }
chrono = { version = "0.4.39", features = ["serde"] }
