[package]
name = "signature_to_keys"
edition = "2021"
version = "0.0.1"

[dependencies]
age = { version = "0.11.1", features = ["armor", "ssh"] }
anyhow = { version = "1.0.95", features = ["backtrace"] }
bech32 = "0.11.0"
derive_builder = "0.20.2"
hex = "0.4.3"
hkdf = "0.12.4"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
sha2 = "0.10.8"
ssh-key = { version = "0.6.7", features = ["ed25519", "rand_core"] }
trezor-client = "0.1.4"
x25519-dalek = "2.0.1"
zeroize = "1.8.1"
