[package]
name = "signature_to_keys"
version = "0.1.0"
description = """
A deterministic subkey derivation crate that signs human-readable strings using a master private key,
hashes the signature via SHA-256 to generate a 256-bit seed,
and produces various cryptographic key pairs
(e.g., SSH ed25519, Ethereum wallets, curve25519-dalek keys).
"""
authors = ["Ryder Freeman"]
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/signature_to_keys"
repository = "https://github.com/OnionVault/onion_vault"
homepage = "https://github.com/RyderFreeman4Logos/onion_vault/tree/main/crates/signature_to_keys"
keywords = ["deterministic", "subkey", "derivation", "cryptography", "signature"]
categories = ["cryptography", ]
rust-version = "1.84.1"

[dependencies]
anyhow = { version = "1.0.95", features = ["backtrace"] }
derive_builder = "0.20.2"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
sha2 = "0.10.8"
trezor-client = "0.1.4"
zeroize = "1.8.1"
ssh-key = { version = "0.6.7", optional = true, features = ["ed25519", "rand_core"] }
age = { version = "0.11.1", optional = true, features = ["armor", "ssh"] }
curve25519-dalek = { version = "4", optional = true, default-features = false }

[features]
default = ["rage"]
ssh_ed25519 = ["ssh-key"]
rage = ["ssh_ed25519", "age"]
scalar = ["curve25519-dalek"]
