[package]
name = "uni_vault"
version = "0.0.0"
edition = "2021"

[dependencies]
signature_to_keys = { path = "../signature_to_keys" }
aes-gcm-siv = "0.11.1"
age = { version = "0.11.1" }
anyhow = "1.0.95"
argon2 = "0.5.3"
base58ck = { version = "0.2.0", features = ["alloc"] }
chacha20poly1305 = "0.10.1"
generic-array = "1.1.1"
git2 = "0.20.0"
hkdf = "0.12.4"
rand = "0.8.5"
rand_core = "0.6.4"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.134", features = ["std"] }
sha2 = "0.10.8"
tokio = "1.43.0"
trezor-client = { version = "0.1.4", features = ["ethereum"] }
typenum = "1.17.0"
derive_builder = "0.20.2"
zeroize = { version = "1.8.1", features = ["derive", "serde", "std",] }
chrono = { version = "0.4.39", features = ["clock"] }
